# checkhomeIP

./: .gitignore  Cargo.toml  LICENSE  README.md  checkip.env  checkip.service
src/: check.rs  mail.rs  main.rs  notify.rs
