[package]
name = "checkhomeip"
version = "1.1.3"
edition = "2021"
author = "TheDonSaysNah"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "local-offset"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "^0.3.18", features = ["std", "time", "env-filter"] }

anyhow = "1.0.89"
dotenv = "0.15.0"
lettre = "0.11.9"
tracing = "0.1.40"
tokio-util = "0.7.12"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
incremental = true
strip = true

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
