[package]
name = "checkhomeip"
version = "2025.1.10"
edition = "2021"
author = "TheDonSaysNah"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
time = { version = "0.3.36", features = ["formatting", "parsing", "local-offset"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "^0.3.18", features = ["std", "time", "env-filter"] }

anyhow = "1.0.89"
dotenv = "0.15.0"
lettre = "0.11.9"
tracing = "0.1.40"
tokio-util = "0.7.12"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
incremental = true
strip = true

#[profile.release] # Optimize for size
#opt-level = "z"
#strip = true
#lto = 'thin'
#codegen-units = 1
#panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
