[package]
name = "checkhomeip"
version = "2025.2.17"
edition = "2021"
authors = ["TheDonSaysNah"]

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
local-ip-address = "0.6.3"
reqwest = { version = "0.12.12", features = ["json"] }
time = { version = "0.3.37", features = ["formatting", "parsing", "local-offset"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }
tracing-subscriber = { version = "0.3.19", features = ["std", "time", "env-filter"] }

anyhow = "1.0.95"
dotenv = "0.15.0"
lettre = "0.11.11"
tracing = "0.1.41"
tokio-util = "0.7.13"

[profile.release]
lto = 'fat'
codegen-units = 1
opt-level = 3
incremental = true
strip = true

#[profile.release] # Optimize for size
#opt-level = "z"
#strip = true
#lto = 'thin'
#codegen-units = 1
#panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
